# FractalShark

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  ATInfo.cpp  ATInfo.h  ATResult.cpp  ATResult.h  BLA.h  BLAS.cpp  BLAS.h  CMakeLists.txt  CONTRIBUTING.md  CudaDblflt.h  DrawThreadSync.h  FloatComplex.h  Fractal.cpp  Fractal.h  FractalNetwork.cpp  FractalNetwork.h  FractalSetupData.cpp  FractalSetupData.h  GPUBLAS.h  GPU_BLAS.h  GPU_LAInfoDeep.h  GPU_LAReference.h  GPU_Render.cu  GPU_Render.h  GPU_Types.h  GenericLAInfo.cpp  HDRFloat.cpp  HDRFloat.h  HDRFloatComplex.h  HighPrecision.h  ItersMemoryContainer.cpp  LAInfo.cpp  LAInfoDeep.cpp  LAInfoDeep.h  LAInfoI.h  LAReference.cpp  (+24 more)
FractalSharkCli/: CMakeLists.txt  FractalSharkCli.vcxproj  main.cpp
FractalSharkGpuLib/: AntialiasingKernel.cuh  BLA.cuh  BLAKernels.cuh  CMakeLists.txt  DisabledKernels.cuh  FractalSharkGpuLib.vcxproj  GPU_Render.cu  InitStatics.cuh  LAKernel.cuh  LowPrecisionKernels.cuh  Main.cpp  Perturb.cuh  PerturbResultsCollection.cuh  ReductionKernels.cuh  ScaledKernels.cuh
FractalSharkGuiLinux/: CMakeLists.txt  LinuxClipboard.cpp  LinuxClipboard.h  LinuxCommandHandlers.cpp  LinuxCommandHandlers.h  LinuxEmbeddedSplashImages.h  LinuxHelpModals.h  LinuxImGuiOverlay.cpp  LinuxImGuiOverlay.h  LinuxMainWindow.cpp  LinuxMainWindow.h  LinuxMenuState.cpp  LinuxMenuState.h  LinuxSplashWindow.cpp  LinuxSplashWindow.h  LinuxX11ContextMenu.cpp  LinuxX11ContextMenu.h  LinuxXlibBackend.cpp  LinuxXlibBackend.h  PARITY.md  main.cpp
FractalSharkLib/: ATInfo.h  ATResult.h  AbortMonitor.cpp  AbortMonitor.h  AlgCmds.h  AutoZoomer.cpp  AutoZoomer.h  BLA.h  BLAS.cpp  BLAS.h  BenchmarkData.cpp  BenchmarkData.h  BenchmarkDataCollection.h  CBitmapWriter.cpp  CBitmapWriter.h  CMakeLists.txt  CalcContext.h  Callstacks.cpp  Callstacks.h  CommandCatalog.cpp  CommandCatalog.h  CrummyTest.cpp  CrummyTest.h  CudaDblflt.h  DrawThreadSync.h  Exceptions.cpp  Exceptions.h  FeatureFinder.cpp  FeatureFinder.h  FeatureFinderMode.h  FeatureFinderOrchestrator.cpp  FeatureFinderOrchestrator.h  FeatureSummary.cpp  FeatureSummary.h  FloatComplex.h  Fractal.cpp  Fractal.h  FractalPalette.cpp  FractalPalette.h  FractalSave.cpp  (+95 more)
FractalSharkLib/QuadDouble/: common.cuh  gqd_type.h  inline.cuh
FractalSharkLib/QuadFloat/: inline.cuh
FractalSharkLib/WPngImage/: WPngImage.cc  WPngImage.hh  lodepng.cpp  lodepng.h
FractalSharkLib/heap_allocator/: HeapCpp.cpp  commented_heap.cpp  llist.cpp
FractalSharkPlatform/: AlignedAlloc.h  CMakeLists.txt  CrashHandler.h  CrashHandlerLinux.cpp  CrashHandlerWin32.cpp  Environment.h  EnvironmentLinux.cpp  EnvironmentWin32.cpp  FractalSharkPlatform.vcxproj  GlIncludes.h  JobObject.h  JobObjectLinux.cpp  JobObjectWin32.cpp  MpirGmp.h  WaitCursor.cpp  WaitCursor.h  WaitCursorLinux.cpp  WaitCursorWin32.cpp
FractalSharkPlatform/Common/: CrashHandler.h  Environment.h  JobObject.h  NativeOpenGLContext.h  WaitCursor.h
FractalSharkPlatform/Linux/: CrashHandlerLinux.cpp  EnvironmentLinux.cpp  NativeOpenGLContextLinux.cpp  WaitCursorLinux.cpp
FractalSharkPlatform/Win32/: CrashHandlerWin32.cpp  EnvironmentWin32.cpp  NativeOpenGLContextWin32.cpp
FractalSharkTest/: BlaHostInstantiate.cpp  CMakeLists.txt  CommandCatalogTest.cpp  Crc64.h  FractalSharkTest.vcxproj  HeapCleanupStub.cpp  MenuStateTest.cpp  TestATInfo.cpp  TestBLA.cpp  TestCudaDblflt.cpp  TestFloatComplex.cpp  TestFramework.h  TestGrowableVector.cpp  TestGuiShared.cpp  TestHDRFloat.cpp  TestHDRFloatComplex.cpp  TestHeapAllocator.cpp  TestHighPrecisionStrings.cpp  TestLAParameters.cpp  TestMpirOrbitEval.cpp  TestMpirSerialization.cpp  TestPointZoomBBConverter.cpp  TestPrecisionCalculator.cpp  TestRenderGoldens.cpp  main.cpp
HpSharkFloatLib/: ATInfo.h  ATResult.h  AbortMonitor.cpp  AbortMonitor.h  Add.cu  Add.cuh  Add.h  AddTestKernels.cu  Add_ABC.cuh  Add_ABC.h  Add_DE.cuh  Add_DE.h  BenchmarkTimer.cpp  BenchmarkTimer.h  CMakeLists.txt  Callstacks.cpp  Callstacks.h  CudaCrap.h  CudaDblflt.h  DbgHeap.h  DebugChecksum.cuh  DebugChecksum.h  DebugChecksumHost.h  DebugStateRaw.h  EarlyCommandLine.cpp  EarlyCommandLine.h  Exceptions.cpp  Exceptions.h  ExplicitInstantiate.h  FloatComplex.h  GPU_ReferenceIter.h  HDRFloat.cpp  HDRFloat.h  HDRFloatComplex.h  HighPrecision.cpp  HighPrecision.h  HpSharkFloat.cu  HpSharkFloat.cuh  HpSharkFloat.h  HpSharkFloatConversions.h  (+66 more)
HpSharkFloatLib/Archived/: Add.cu  AddInternal.cuh  MultiplyHelperGlobalUnaligned.cuh  MultiplyHelperVectorLoads.cuh  MultiplyInternal.cuh  MultiplyKaratsuba.cu  MultiplyKaratsubaV1.cu  MultiplyN2.cu  MultiplyTestKernels.cu  NullKernel.cu  NullKernel.cuh  ReferenceFFT.cpp  ReferenceKaratsuba.cpp  ReferenceKaratsubaV1.cpp  RemovedFromHpSharkFloat.cuh
HpSharkFloatLib/generated_inst/: SharkExplicitInstantiate_AddKernels_Dbf.cu  SharkExplicitInstantiate_AddKernels_Dbl.cu  SharkExplicitInstantiate_AddKernels_NP.cu  SharkExplicitInstantiate_AddKernels_NR.cu  SharkExplicitInstantiate_AddKernels_P.cu  SharkExplicitInstantiate_HpSharkFloat_Conversions_Dbf.cu  SharkExplicitInstantiate_HpSharkFloat_Conversions_Dbl.cu  SharkExplicitInstantiate_HpSharkFloat_Conversions_NP.cu  SharkExplicitInstantiate_HpSharkFloat_Conversions_NR.cu  SharkExplicitInstantiate_HpSharkFloat_Conversions_P.cu  SharkExplicitInstantiate_HpSharkReference_Dbf.cu  SharkExplicitInstantiate_HpSharkReference_Dbl.cu  SharkExplicitInstantiate_HpSharkReference_NP.cu  SharkExplicitInstantiate_HpSharkReference_NR.cu  SharkExplicitInstantiate_HpSharkReference_P.cu  SharkExplicitInstantiate_MultiplyNTT_Dbf.cu  (+14 more)
HpSharkFloatTestLib/: CMakeLists.txt  Conversion.cpp  HpSharkFloatTestLib.cpp  HpSharkFloatTestLib.vcxproj  KernelInvokeAddCorrectness.cpp  KernelInvokeNTTCorrectness.cpp  KernelInvokeNTTPerf.cpp  KernelInvokeReferenceCorrectness.cpp  PerfTimingResult.h  ReferenceAdd.cpp  ReferenceAdd.h  ReferenceNTT2.cpp  ReferenceNTT2.h  ReferenceReferenceOrbit.cpp  ReferenceReferenceOrbit.h  ShowMostEfficientSizes.cpp  ShowMostEfficientSizes.h  TestNewtonRaphson.cpp  TestNewtonRaphson.h  TestTracker.cpp  TestTracker.h  Tests.cpp  Tests.h
Notes/: build.cmd  (+44 more)
(+265 files in other folders)
